--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi>=0.110.0
-uvicorn>=0.27.0
-anthropic>=0.20.0
-httpx>=0.27.0
-python-dotenv>=1.0.0
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+anthropic==0.34.2
+httpx==0.27.2
+python-multipart==0.0.9
